--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.5.9",
     "react": "16.6.1",
     "react-native": "0.57.7"
   },
